# client-reporting-generator

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py
app/api/: auth.py  clients.py  deps.py  reports.py
app/core/: cache.py  config.py  database.py  logger.py  security.py
docker/: .env.example  .gitignore  Dockerfile  compose.yml
docker/.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 51519be5388d_add_email_to_clients.py  ab68af945bf2_add_users_table.py  d00c25658060_create_clients_and_reports_tables.py
scripts/: benchmark.py  seed.py
templates/: report.html
tests/: test_api.py
workers/: celery.py  tasks.py
