[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "client-reporting-generator"
version = "0.1.0"
description = "Async PDF report generation service for financial clients"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "loguru>=0.7.0",
    "flower>=2.0.0",
    "faker>=24.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sentry-sdk[fastapi]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workers*"]
exclude = ["tests*", "docker*", "templates*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]